portfolio and contact sections complete

--- a/index.html
+++ b/index.html
@@ -242,12 +242,12 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-box-arrow-right"></i></span>
+                <span class="ico-circle"><i class="bi bi-body-text"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Motion Design</h2>
+                <h2 class="s-title">Content Creation</h2>
                 <p class="s-description text-center">
-                  If you need custom animation work done on an existing site, I can do so with your current stack whether it's pure CSS3, svg animation, Adobe After Effects, Origami, etc.
+                  I provide article writing, blurbs, social media content, blog posts, etc. for existing and new projects. Take a look at my portfolio for examples of original traffic generating content.
                 </p>
               </div>
             </div>
@@ -329,17 +329,17 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/salish1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/salish1.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Lorem impsum dolor</h2>
+                    <h2 class="w-title">Salish Sea Maritime Expertise</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Development</span> / <span class="w-date">12 Dec. 2021</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -353,17 +353,17 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/meghna2.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/meghna2.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Loreda Cuno Nere</h2>
+                    <h2 class="w-title">Transformer Design</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Development</span> / <span class="w-date">30 Jan. 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -377,17 +377,17 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/hiit1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/hiit1.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Mavrito Lana Dere</h2>
+                    <h2 class="w-title">HIIT Wenatchee</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web Development</span> / <span class="w-date">18 March 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -401,17 +401,17 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/snohomish1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/snohomish1.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Bindo Laro Cado</h2>
+                    <h2 class="w-title">Snohomish Construction</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web &amp; Brand Development</span> / <span class="w-date">3 Apr. 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -425,17 +425,17 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/lumber1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/lumber1.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Lena Mado</h2>
+                    <h2 class="w-title">Ritzville Lumber</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Web & Brand Development</span> / <span class="w-date">11 June 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -447,7 +447,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/work-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
@@ -470,7 +470,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -478,7 +478,7 @@
     <!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
+    <!-- <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -500,7 +500,8 @@
                       </p>
                     </div>
                   </div>
-                </div><!-- End testimonial item -->
+                </div>
+
 
                 <div class="swiper-slide">
                   <div class="testimonial-box">
@@ -515,21 +516,23 @@
                       </p>
                     </div>
                   </div>
-                </div><!-- End testimonial item -->
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
-            </div>
+            </div> -->
 
             <!-- <div id="testimonial-mf" class="owl-carousel owl-theme">
 
         </div> -->
-          </div>
+          <!-- </div>
         </div>
       </div>
-    </div><!-- End Testimonials Section -->
+    </div> -->
+    <!-- End Testimonials Section -->
 
     <!-- ======= Blog Section ======= -->
-    <section id="blog" class="blog-mf sect-pt4 route">
+    <!-- <section id="blog" class="blog-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -640,7 +643,8 @@
           </div>
         </div>
       </div>
-    </section><!-- End Blog Section -->
+    </section> -->
+    <!-- End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
@@ -654,7 +658,7 @@
                   <div class="col-md-6">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        Send Message Us
+                        Send Me A Message
                       </h5>
                     </div>
                     <div>
@@ -700,15 +704,12 @@
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
+                        Thanks for stopping by. Send me an email, text, or call me if you have any questions. I'm always up for a chat about anything really (especially food). Let me know!
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                        <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                        <li><span class="bi bi-geo-alt"></span> SEATTLE, WA 98115</li>
+                        <li><span class="bi bi-phone"></span> (206) 291-7208</li>
+                        <li><span class="bi bi-envelope"></span> matthewgdwyer@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
@@ -736,7 +737,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>Matthew Dwyer Design</strong>. All Rights Reserved</p>
 
           </div>
         </div>
