--- a/index.html
+++ b/index.html
@@ -662,6 +662,7 @@
                       </h5>
                     </div>
                     <div>
+
                       <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
@@ -671,7 +672,7 @@
                           </div>
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
-                              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                              <input type="email" name="email" class="form-control" id="email" placeholder="Your Email" required>
                             </div>
                           </div>
                           <div class="col-md-12 mb-3">
@@ -690,7 +691,7 @@
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
-                            <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                            <button type="submit" class="button button-a button-big button-rouded" >Send Message</button>
                           </div>
                         </div>
                       </form>
