--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/test2.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/matt3.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">I am Matthew Dwyer</h1>
+          <h1 class="hero-title mb-4">I'm  Matthew Dwyer</h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="Web Developer, Freelancer, Cook, Designer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
@@ -100,7 +100,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/testing.jpeg" class="img-fluid matt rounded b-shadow-a" alt="">
+                        <img src="assets/img/matt1.jpg" class="img-fluid matt rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -647,7 +647,7 @@
     <!-- End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
+    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/matt3.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -709,16 +709,16 @@
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> SEATTLE, WA 98115</li>
-                        <li><span class="bi bi-phone"></span> (206) 291-7208</li>
+                        <li><span class="bi bi-phone"></span>+1 (206) 291-7208</li>
                         <li><span class="bi bi-envelope"></span> matthewgdwyer@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://www.facebook.com/matt.dwyer.587"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/pizzamorphosis/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                        <li><a href="https://github.com/MattGDwyer"><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/matthew-dwyer-5289a119b/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
