--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <!-- <h1 class="logo"><a href="index.html">Matthew Dwyer</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="assets/img/MDD1.png" alt="" class="img-fluid mdd"></a>
+      <a href="index.html" class="logo"><img src="assets/img/Matthew Dwyer Design-1 (3).png" alt="" class="img-fluid mdd"> Matthew Dwyer Design</a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -80,7 +80,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I'm  Matthew Dwyer</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Web Developer, Freelancer, Cook, Designer"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Web Developer, Brand Manager, Cook, Designer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -327,6 +327,7 @@
           </div>
         </div>
         <div class="row">
+
           <div class="col-md-4">
             <div class="work-box">
               <a href="assets/img/salish1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
@@ -337,7 +338,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Salish Sea Maritime Expertise</h2>
+                    <h2 class="w-title">Salish Sea</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Development</span> / <span class="w-date">12 Dec. 2021</span>
                     </div>
@@ -441,6 +442,30 @@
                   <div class="col-sm-4">
                     <div class="w-like">
                       <a href="portfolio-ritzville.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/sage_forest/sage_forest1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/sage_forest/sage_forest1.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Sage Forest</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Web Development</span> / <span class="w-date">10 Sept. 2022</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="portfolio-sage-forest.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
