--- a/portfolio-sage-forest.html
+++ b/portfolio-sage-forest.html
@@ -36,9 +36,9 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo"><img src="assets/img/Matthew Dwyer Design-1 (3).png" alt="" class="img-fluid mdd"> Matthew Dwyer Design</a>
+      <!-- <h1 class="logo"><a href="index.html">Matthew Dwyer</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo"><img src="assets/img/Matthew Dwyer Design-1 (3).png" alt="" class="img-fluid mdd"> Matthew Dwyer Design</a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -77,7 +77,7 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">Transformer Design</h2>
+          <h2 class="hero-title mb-4">Sage Forest Metaphysics</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
               <a href="index.html">Home</a>
@@ -102,15 +102,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/meghna1.png" alt="">
+                  <img src="assets/img/sage_forest/sage_forest1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/meghna2.png" alt="">
+                  <img src="assets/img/sage_forest/sage_forest2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/meghna3.png" alt="">
+                  <img src="assets/img/sage_forest/sage_forest3.png" alt="">
                 </div>
 
               </div>
@@ -122,16 +122,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <!-- <li><strong>Client</strong>: Transformer Design</li> -->
-                <li><strong>Project date</strong>: 30 January, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://transformer-design.herokuapp.com/">www.transformer-design.herokuapp.com</a></li>
+                <li><strong>Category</strong>: Web design and Brand Development</li>
+                <!-- <li><strong>Client</strong>: Salish Sea Maritime Expertise</li> -->
+                <li><strong>Project date</strong>: 10 September, 2022</li>
+                <li><strong>Project URL</strong>: <a href="https://www.sage-forest.com">sage-forest.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Transformer Design</h2>
+              <h2>Spirituality Coaching, and Metaphysics Education</h2>
               <p>
-                For this project I used a bootstrap template. This cut down on the time to build the site in half. I produced all the content on the site (logo, paragraphs, blurbs, etc), customized everything, wrote the backend using express and published it to the web using heroku. Looks pixel-perfect on all screen sizes, and all animations are smooth as silk.
+                Casey came to me with a logo, a dream for her company and that's about it. Through our conversations I got a good idea of how to design the site to reflect her personality, and the goals of her business. The resultant site has already drawn in clients. We intend to work together on further brand development projects! It has been my pleasure.
               </p>
             </div>
           </div>
@@ -149,7 +149,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>Matthew Dwyer Design</strong>. All Rights Reserved</p>
 
           </div>
         </div>
