--- a/portfolio-wenatchee.html
+++ b/portfolio-wenatchee.html
@@ -36,7 +36,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Matthew Dwyer</a></h1>
+      <a href="index.html" class="logo"><img src="assets/img/Matthew Dwyer Design-1 (3).png" alt="" class="img-fluid mdd"> Matthew Dwyer Design</a>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
