--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Matthew</span></p>
-                        <p><span class="title-s">Profile: </span> <span>freelance developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>matthewgdwyer@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(206) 291-7208</span></p>
+                        <p><span class="title-s">Name: </span> <span>Matthew Dwyer</span></p>
+                        <!-- <p><span class="title-s">Profile: </span> <span>freelance developer</span></p> -->
+                        <p><span class="title-s">Email: </span> <span>contact@matthew-dwyer.com</span></p>
+                        <!-- <p><span class="title-s">Phone: </span> <span>(206) 291-7208</span></p> -->
                       </div>
                     </div>
                   </div>
                   <div class="skill-mf">
-                    <p class="title-s">Skill</p>
+                    <p class="title-s">Skillz</p>
                     <span>HTML5</span> <span class="pull-right">95%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -143,7 +143,7 @@
                       Hi there. I'm Matt. Thanks for stopping by. I am a web developer. I also do brand management, logo design, and occasionally I write about food and cooking.
                     </p>
                     <p class="lead">
-                     I don't necessarily have a specific style, because I think good design means adapting to cients and projects. I love helping people. That means I will go out of my way to make sure you achieve your project goals and beyond.
+                     I don't necessarily have a specific style, because I think good design means adapting to clients and projects. I love helping people. That means I will go out of my way to make sure you achieve your project goals and beyond.
                     </p>
                     <p class="lead">
                       I develop full stack, which means anything you want is possible. Have an app idea? I'm your guy. Need a site for your business? No problem. Need to get that site to get more traffic and generate more business? My wheelhouse.
