--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 
       <!-- <h1 class="logo"><a href="index.html">Matthew Dwyer</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="assets/img/Matthew Dwyer Design-1 (3).png" alt="" class="img-fluid mdd"> Matthew Dwyer Design</a>
-
+      <!-- <span class="col-sm-3 col-md-6"> -->
+      <a href="index.html" class="logo "><img src="assets/img/Matthew Dwyer Design-1 (3).png" alt="" class="img-fluid mdd"> Matthew Dwyer Design</a>
+    <!-- </span> -->
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
@@ -98,12 +99,12 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="row">
-                    <div class="col-sm-6 col-md-5">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="about-img">
                         <img src="assets/img/matt1.jpg" class="img-fluid matt rounded b-shadow-a" alt="">
                       </div>
                     </div>
-                    <div class="col-sm-6 col-md-7">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Matthew Dwyer</span></p>
                         <!-- <p><span class="title-s">Profile: </span> <span>freelance developer</span></p> -->
