removed link to snohomish construction

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-snohomish.html"> <span class="bi bi-plus-circle"></span></a>
+                      <!-- <a href="portfolio-snohomish.html"> <span class="bi bi-plus-circle"></span></a> -->
                     </div>
                   </div>
                 </div>
